Modificacion de templates, se agrega form y fieldset

--- a/UltimasMenciones.html
+++ b/UltimasMenciones.html
@@ -4,7 +4,8 @@
     <title>CAT - Ultimas Menciones</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
   </head>
   <body>
     <h1>!</h1>
@@ -13,7 +14,7 @@
       <div class="row-fluid">
         <div class="span2">
           <ul class="nav nav-list">
-            <li class="nav-header">CAT - Centro de Atencion Twitter</li>
+            <li class="nav-header">Centro de Atencion Twitter</li>
             <li class="active"><a href="UltimasMenciones.html">Ultimas menciones</a></li>
             <li><a href="cat.html">Centro de atencion</a></li>
             <li><a href="historial.html">Historial</a></li>
@@ -21,13 +22,18 @@
           </ul>
         </div>
         <div class="span10">
-          Ultimas Menciones
+          <form>
+            <fieldset>
+              <legend>Ultimas menciones</legend>
+
+            </fieldset>
+          </form>
         </div>
       </div>
     </div>
 
 
-    <script src="js/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery-1.10.2.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
