Cambio de estilos en tabla

--- a/UltimasMenciones.html
+++ b/UltimasMenciones.html
@@ -34,7 +34,7 @@
               <fieldset>
                 <legend>Ultimas menciones</legend>
                 
-                <table class="table table-striped">
+                <table class="table table-hover">
                   
                   <thead>
                     <tr>
