--- a/UltimasMenciones.html
+++ b/UltimasMenciones.html
@@ -21,7 +21,7 @@
             <ul class="nav nav-list">
               <li class="nav-header">Centro de Atencion Twitter</li>
               <li class="active"><a href="UltimasMenciones.html">Ultimas menciones</a></li>
-              <li><a href="cat.html">Centro de atencion</a></li>
+              <li><a href="cat.html">En proceso</a></li>
               <li><a href="historial.html">Historial</a></li>
               <li><a href="guia.html">Guia</a></li>
             </ul>
